[project]
name = "umami-badge"
version = "0.1.0"
description = "A web service that provides API endpoints for creating badges with website visit statistics from Umami Analytics, compatible with shields.io format"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
]
